# nrf52832-ncs-vscode-demo

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/wtkj/nrf52832wtkj/: Kconfig.nrf52832wtkj  board.yml  nrf52832wtkj-pinctrl.dtsi  nrf52832wtkj.dts  nrf52832wtkj.yml  nrf52832wtkj_defconfig
boards/wtkj/nrf52840wtkj/: Kconfig.nrf52840wtkj  board.yml  nrf52840wtkj-pinctrl.dtsi  nrf52840wtkj.dts  nrf52840wtkj.yml  nrf52840wtkj_defconfig
inc/: app_threads.h  bt_conn_ctrl.h  gatt_svc.h  main.h  param_parse_pack.h
src/: app_threads.c  bt_conn_ctrl.c  gatt_svc.c  main.c  param_parse_pack.c
